--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-22 [我是麦杰逊｜十个案例！看看普通人偷燃气的下场！](/articles/cdt/341427.md)
+
 4-22 [【404文库】维度新闻｜9岁坠亡男孩曾被罚抄词1万遍，家长翻着作业本止不住颤抖](/articles/cdt/341432.md)
 
 4-22 [封面新闻｜从医者变成病人，“鸿茅药酒事件”当事人谭秦东的劫后余生](/articles/cdt/341434.md)
@@ -598,6 +600,4 @@
 3-19 [每日一语 2024.3.18](/articles/cdt/342536.md)
 
 3-19 [【404文库】基本常识｜不存在的包青天，靠不住的大老爷](/articles/cdt/342538.md)
-
-3-19 [北城远在北方｜民以食为天，谁来守护我们的餐桌？](/articles/cdt/342540.md)
 
