--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-22 [德国工业产出预计将进一步下滑](/articles/dw/1025824.md)
+
 4-22 [向乌克兰转让防空系统? 西班牙希腊承受压力](/articles/dw/1025825.md)
 
 4-22 [三名德国人涉嫌为中国情报部门担当间谍被捕](/articles/dw/1025826.md)
@@ -598,6 +600,4 @@
 3-27 [台湾、尼泊尔之后 泰国也将实现同性婚姻合法化](/articles/dw/1026122.md)
 
 3-27 [德国铁路罢工潮终于告一段落](/articles/dw/1026123.md)
-
-3-27 [習近平會美商高管 只是「拍照作秀」？](/articles/dw/1026124.md)
 
