--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-22 [岸田文雄向靖国神社供奉祭品引发中国和韩国不满](/articles/voa/1016213.md)
+
+4-22 [中国多地推住房“以旧换新” 分析:恐难逆转楼市困局](/articles/voa/1016214.md)
+
 4-22 [所罗门群岛议会选举继续点票 亲中总理政党未获过半优势](/articles/voa/1016215.md)
 
 4-22 [美菲年度军演之际 中国警告各国称反对秀肌肉的炮舰外交](/articles/voa/1016216.md)
@@ -596,8 +600,4 @@
 4-10 [美国再警告将追究中国在乌克兰战争中援助俄罗斯的责任](/articles/voa/1016511.md)
 
 4-10 [拜登称以色列的加沙政策“错误”](/articles/voa/1016512.md)
-
-4-10 [美副国务卿：正考虑放宽美国人前往中国的旅游警示](/articles/voa/1016513.md)
-
-4-10 [美副国务卿谈美中竞争、台海稳定、中俄关系](/articles/voa/1016514.md)
 
