--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-22 [面对中国武力威胁  台湾在野党呼吁松绑《反渗透法》](/articles/rfa/1037264.md)
+
 4-22 [北京一副市长涉违纪违法被抓 头四个月22名中高层官员落马](/articles/rfa/1037265.md)
 
 4-22 [南海局势紧张之际   中国主办西太平洋海军论坛](/articles/rfa/1037266.md)
@@ -598,6 +600,4 @@
 3-19 [台湾防长称两岸濒临动武 　5成民众没有同感](/articles/rfa/1037562.md)
 
 3-19 [民众聚集开封府跪哭申冤　重庆访民因上访被游街](/articles/rfa/1037563.md)
-
-3-19 [香港立法会全票火速通过《基本法》23条](/articles/rfa/1037564.md)
 
